--- a/package.json
+++ b/package.json
@@ -22,13 +22,10 @@
   "homepage": "https://github.com/alanpain08/movies-explorer-api#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
     "celebrate": "^15.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "escape-html": "^1.0.3",
-    "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.5.1",
     "express-winston": "^4.2.0",
@@ -43,7 +40,6 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
     "jest": "^27.3.1",
-    "nodemon": "^2.0.13",
-    "supertest": "^6.1.6"
+    "nodemon": "^2.0.13"
   }
 }
